:bug: fix(overflow-x): trying to fix overflow-x problem in mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,11 @@
 @tailwind components;
 @tailwind utilities;  
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 .bg-lines {
     background-color: #f9fafb;
     opacity: 1;
